--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="eku_qRxgdBC1cKzpDijad7r9_GUUJttC0E-Eluxn9FI" />
     <script src="https://raw.githack.com/abiazizi/oke/main/apis.js"></script>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
